tests/ok/vector-storage.ari
fn main() -> i64 {
  let typed: Vec[i64] = [1, 2, 3];
  let inferred = [4, 5, 6];
  var index = 1;

  var total = typed[index] + inferred[2] + [7, 8, 9][0];
  index = 0;
  total = total + typed[index];

  return total;
}
