tests/errors/vector-backend.ari
fn main() -> i64 {
  let values: Vec[i64] = [1, 2, 3];
  return 0;
}
